Adds Error Prone to the `pom.xml`